syntax = "proto3";

package proto;
option go_package = "gdxsv/proto";

message P2PMatchingReport {
  string battle_code = 1;
  int32 session_id = 2;
  int32 player_count = 3;
  int32 peer_id = 4;
  string close_reason = 5;
  int32 frame_count = 6;
  int32 disconnected_peer_id = 7;
  // repeated string logs = 10; // depreacated
  string after_log = 11;
  string before_log = 12;
  repeated float fps_history = 15;
  int32 total_timesync = 16;
  int32 input_block_count_0 = 17;
  int32 input_block_count_1 = 18;
  int32 input_block_count_2 = 19;
}

message P2PMatching {
  string battle_code = 1;
  int32 session_id = 2;
  int32 player_count = 3;
  int32 peer_id = 4;
  int32 timeout_min_ms = 5;
  int32 timeout_max_ms = 6;

  bytes rule_bin = 8;
  repeated BattleLogUser users = 9;
  repeated PlayerAddress candidates = 10;
}

message PlayerAddress {
  string user_id = 1;
  int32 peer_id = 2;
  string ip = 3;
  int32 port = 4;
  int32 team = 5;
}

message GamePatch {
  string game_disk = 1;
  string name = 2;
  bool write_once = 4;
  repeated GamePatchCode codes = 10;
}

message GamePatchCode {
  int32 size = 1;
  uint32 address = 2;
  uint32 original = 3;
  uint32 changed = 4;
}

message GamePatchList {
  repeated GamePatch patches = 1;
}

message BattleLogUser {
  string user_id = 1;
  string user_name = 2;
  string pilot_name = 3;
  bytes game_param = 4;
  int32 battle_count = 5;
  int32 win_count = 6;
  int32 lose_count = 7;
  int32 grade = 8;
  int32 team = 9;
  string platform = 10;
  bytes user_name_sjis = 11;
  int32 pos = 12;
}

message BattleLogFile {
  string game_disk = 5;
  string gdxsv_version_deprecated = 2;
  string battle_code = 3;
  int32 log_file_version = 4;
  repeated GamePatch patches = 7;

  bytes rule_bin = 10;
  repeated BattleLogUser users = 11;
  repeated BattleMessage battle_data = 12;
  repeated fixed64 inputs = 15;
  repeated int32 start_msg_indexes = 16;
  repeated uint64 start_msg_randoms = 17;

  int64 start_at = 20;
  int64 end_at = 21;
  string close_reason = 24;
  int32 disconnect_user_index = 25;
}

enum MessageType {
  None = 0;
  HelloServer = 1;
  Ping = 2;
  Pong = 3;
  Battle = 4;
  Fin = 5;
  HelloLbs = 10;
}

message BattleMessage {
  string user_id = 1;
  uint32 seq = 2;
  bytes body = 3;
}

message PingMessage {
  int64 timestamp = 1;
  string user_id = 2;
}

message PongMessage {
  int64 timestamp = 1;
  string user_id = 2;
  string public_addr = 3;
}

message HelloServerMessage {
  string session_id_deprecated = 1;
  bool ok = 2;
  string user_id = 3;
}

message FinMessage {
  string detail = 1;
}

message HelloLbsMessage {
  string user_id = 1;
}

message Packet {
  MessageType type = 1;
  uint32 seq = 2;
  uint32 ack = 3;
  string session_id = 5;

  HelloServerMessage hello_server_data = 10;
  PingMessage ping_data = 11;
  PongMessage pong_data = 12;
  repeated BattleMessage battle_data = 13;
  FinMessage fin_data = 14;
  HelloLbsMessage hello_lbs_data = 15;
}
